# iacula-v2

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
scripts/: check-dist.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/prayers/: angelus.json
src/assets/quotes/: quotes.json
src/core/services/: AngelusService.ts  EasterDate.ts  configService.ts  contentService.ts  easterDateService.ts
src/domain/entities/: AngelusPrayer.ts  DailyContent.ts  Image.ts  Quote.ts
src/domain/events/: ContentUpdatedEvent.ts
src/domain/repositories/: IContentRepository.ts
src/domain/services/: ContentService.ts
src/main/: main.ts
src/presentation/: index.html  popup.html  renderer.ts  settings.html  settings.js  settings.ts
src/presentation/components/angelus/: AngelusPopup.ts
src/presentation/components/pages/: angelus.html
src/presentation/events/: handlers.ts
src/presentation/ui/styles/: main.css
src/types/: tauri.d.ts
