[package]
name = "Iacula"
version = "0.1.0"
description = "Cultivar Presença de Deus"
authors = ["Gabriel Tavares"]
license = "ISC"
repository = ""
default-run = "Iacula"
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "Iacula"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = [ "api-all",
    "system-tray"] }
